# repo-health-doctor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROMPT.md  README.md  SECURITY.md  pyproject.toml  repo-health-doctor.yml
.github/: pull_request_template.md
docs/: GOAL.md  PLAN.md  README.md  STATUS.md  agent-contract.md  agent-development-guide.md  agent-guide.md  ai-agent-preflight.md  architecture.md  authorization-contract.md  authorization-discovery.md  ci-integration.md  compatibility-regeneration.md  demo-runbook.md  demo.md  docker-integration-ci.md  evaluation-model.md  external-scanner-adapter-design.md  features.json  field-report-template.md  field-research-safety-protocol.md  image-compatibility.md  integration-claude-code.md  integration-codex.md  integration-cursor.md  maintainer-guide.md  maintainer-system-roadmap.md  policy.md  private-candidate-review-workflow.md  project-pitch.md  public-contracts.md  publication-review-checklist.md  quickstart.md  real-docker-verification.md  real-gitleaks-compatibility.md  real-osv-compatibility.md  real-scanner-suite.md  real-trivy-compatibility.md  release-checklist.md  requirements.md  (+17 more)
licenses/: MOBY-APACHE-2.0.txt
policies/: external-scanner-execution-policy.v0.1.json  external-scanner-risk-policy.v0.1.json  pre-execution-gate-policy.v0.1.json
prompts/: KICKOFF.md
schemas/: evidence.schema.json  execution-authorization.schema.json  external-scanner-plan.schema.json  external-scanner-readiness-result.schema.json  external-scanner-result.schema.json  external-scanner-risk-policy.schema.json  gate-decision.schema.json  policy-config.schema.json  pre-execution-gate-policy.schema.json  public-safety-report.schema.json  real-scanner-suite.schema.json  release-check-report.schema.json  report-diff.schema.json  sandbox-approval-draft.schema.json  sandbox-behavior-policy-binding-validation.schema.json  sandbox-behavior-policy.schema.json  sandbox-image-attestation.schema.json  sandbox-image-lock-binding-validation.schema.json  sandbox-image-lock.schema.json  sandbox-normalized-observer-evidence.schema.json  sandbox-report.schema.json  sandbox-run.schema.json  sandbox-runner-preflight.schema.json  sandbox-single-command-live-gate.schema.json  sandbox-static-transition-validation.schema.json  sandbox-unknown-repo-command-approval.schema.json  sandbox-unknown-repo-profile.schema.json  verified-snapshot.schema.json
scripts/: demo_agent_preflight.py  goal_loop_fallback.sh  goal_loop_runner.py  host_commit.py  init.sh  kickoff.sh  loop.sh  regenerate-gitleaks-compat-fixtures.sh  regenerate-osv-compat-fixtures.sh  regenerate_real_scanner_fixtures.py  release-check-smoke.sh  run_candidate_seccomp_review.py  validate_final_security_gates.py
tests/: external_scanner_fixture_helpers.py  test_adversarial_major_regressions.py  test_agent_binding_docs.py  test_agent_contract_docs.py  test_ai_agent_integration_docs.py  test_ai_agent_preflight_demo.py  test_authorization_discovery.py  test_authorization_discovery_cli.py  test_authorization_discovery_contract.py  test_candidate_seccomp_real_docker.py  test_compatibility_regeneration_scripts.py  test_demo_examples.py  test_docker_integration_always_on.py  test_doctor.py  test_evidence_model.py  test_execution_authorization.py  test_execution_authorization_expiry.py  test_execution_authorization_image_binding.py  test_execution_authorization_single_use.py  test_execution_authorization_worktree_binding.py  test_external_evidence_cli.py  test_external_scanner_execution_readiness.py  test_external_scanner_golden_fixtures.py  test_external_scanner_plan_validator.py  test_external_scanner_result_validator.py  test_external_scanner_risk_mapper.py  test_external_suite_evidence.py  test_external_suite_gate_mapping.py  test_field_report_template.py  test_field_research_safety_protocol.py  test_final_major_real_docker.py  test_final_security_gates.py  test_gate_decision_cli_report_integration.py  test_gate_decision_model.py  test_gate_evaluator.py  test_gate_evaluator_v3_compatibility.py  test_gate_summary_cli.py  (+60 more)
tests/fixtures/sandbox-phase3-python-runtime/: pyproject.toml
(+287 files in other folders)
