[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-health-doctor"
version = "0.1.0"
description = "Local-first preflight gate for maintainers reviewing repository changes."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "repo-health-doctor contributors"}
]
keywords = [
  "repository",
  "cli",
  "preflight",
  "ci",
  "oss",
  "maintainer",
  "public-safety",
  "repository-health",
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
repo-health-doctor = "repo_health_doctor.cli:main"
